--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
-    "npm-check-updates": "^16.14.6"
+    "global-dirs": "^3.0.1"
   },
   "devDependencies": {
     "@lightwing/eslint-config": "^0.0.24",
@@ -28,8 +28,10 @@
     "conventional-changelog-cli": "^4.1.0",
     "eslint": "^8.51.0",
     "lint-staged": "^15.0.1",
+    "npm-check-updates": "^16.14.6",
     "simple-git-hooks": "^2.9.0",
     "tsup": "^7.2.0",
+    "tsx": "^3.13.0",
     "typescript": "^5.2.2",
     "vitest": "^0.34.6"
   },
