--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "@actions/github": "^6.0.0",
-    "global-dirs": "^3.0.1"
+    "@actions/github": "^6.0.0"
   },
   "devDependencies": {
     "@lightwing/eslint-config": "^0.0.24",
