--- a/.github/workflows/auto-check.yml
+++ b/.github/workflows/auto-check.yml
@@ -42,7 +42,12 @@ jobs:
 
     name: Commit and Push
 
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        node-version: [20.x]
+
+    runs-on: ${{ matrix.os }}
 
     permissions:
       contents: write
@@ -52,7 +57,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: ${{ matrix.node-version }}
 
       - name: Update dependencies
         id: ncu
@@ -67,11 +72,11 @@ jobs:
           cache-name: cache-pnpm-store
         with:
           path: ${{ github.workspace }}/.pnpm-store
-          key: Linux-18.x-${{ env.cache-name }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          key: ${{ runner.os }}-${{ matrix.node-version }}-${{ env.cache-name }}-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
-            Linux-18.x-${{ env.cache-name }}-
-            Linux-18.x-
-            Linux-
+            ${{ runner.os }}-${{ matrix.node-version }}-${{ env.cache-name }}-
+            ${{ runner.os }}-${{ matrix.node-version }}-
+            ${{ runner.os }}-
 
       - name: Install pnpm
         run: npm i -g pnpm
