--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   },
   "devDependencies": {
     "@lightwing/eslint-config": "^1.0.64",
-    "@types/node": "^20.14.10",
+    "@swc/core": "^1.6.13",
+    "@types/node": "^20.14.11",
     "eslint": "^9.7.0",
     "lint-staged": "^15.2.7",
     "npm-check-updates": "^16.14.20",
     "simple-git-hooks": "^2.11.1",
-    "tsup": "^8.1.0",
+    "tsup": "^8.1.1",
     "typescript": "^5.5.3",
     "vitest": "^2.0.3"
   },
