--- a/package.json
+++ b/package.json
@@ -17,20 +17,20 @@
     "postinstall": "npx simple-git-hooks"
   },
   "dependencies": {
-    "@actions/core": "^2.0.0",
-    "@actions/github": "^6.0.1"
+    "@actions/core": "catalog:",
+    "@actions/github": "catalog:",
+    "npm-check-updates": "catalog:"
   },
   "devDependencies": {
-    "@lightwing/eslint-config": "^1.0.135",
-    "@swc/core": "^1.15.3",
-    "@types/node": "^24.10.2",
-    "eslint": "^9.39.1",
-    "lint-staged": "^16.2.7",
-    "npm-check-updates": "^19.1.2",
-    "simple-git-hooks": "^2.13.1",
-    "tsup": "^8.5.1",
-    "typescript": "^5.9.3",
-    "vitest": "^4.0.15"
+    "@lightwing/eslint-config": "catalog:",
+    "@swc/core": "catalog:",
+    "@types/node": "catalog:",
+    "eslint": "catalog:",
+    "lint-staged": "catalog:",
+    "simple-git-hooks": "catalog:",
+    "tsup": "catalog:",
+    "typescript": "catalog:",
+    "vitest": "catalog:"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
