--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,20 +1,3 @@
-trustPolicy: no-downgrade
-trustPolicyExclude:
-  - chokidar@4.0.3
-  - semver@6.3.1
-  - '@octokit/plugin-paginate-rest@9.2.2'
-  - undici@5.29.0
-  - '@octokit/endpoint@9.0.6'
-
-shellEmulator: true
-
-cleanupUnusedCatalogs: true
-
-catalogMode: prefer
-onlyBuiltDependencies:
-  - '@swc/core'
-  - esbuild
-  - simple-git-hooks
 catalog:
   '@actions/core': ^2.0.0
   '@actions/github': ^6.0.1
@@ -28,3 +11,24 @@ catalog:
   tsup: ^8.5.1
   typescript: ^5.9.3
   vitest: ^4.0.15
+  yaml: ^2.8.2
+
+catalogMode: prefer
+
+cleanupUnusedCatalogs: true
+
+onlyBuiltDependencies:
+  - '@swc/core'
+  - esbuild
+  - simple-git-hooks
+
+shellEmulator: true
+
+trustPolicy: no-downgrade
+
+trustPolicyExclude:
+  - chokidar@4.0.3
+  - semver@6.3.1
+  - '@octokit/plugin-paginate-rest@9.2.2'
+  - undici@5.29.0
+  - '@octokit/endpoint@9.0.6'
