--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "npm-upstream-check",
   "version": "0.0.1",
   "packageManager": "pnpm@10.25.0",
+  "workspaces": [],
   "description": "Check the updates of upstream npm dependencies",
   "author": "ArcherGu",
   "license": "MIT",
